<resources>
    <string name="app_name">Nike Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions_to_update_the_inventory">Instructions \n To update the Inventory</string>
    <string name="click_on_add_new_inventory_button">Click On Add New Button \nand enter details</string>
    <string name="save_your_entry">And Finally, Save your Entry</string>
    <string name="enter_all_the_details">Shoe size ranges from 1 to 50. \nMultiple images can be added using the \nDownload and Refresh Buttons.</string>
    <string name="next">Next</string>
    <string name="welcome_to_nike_shoe_store">Welcome to Nike Shoe Store!!</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="description">Description</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_for_new_user">Sign Up for New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_email">Enter a valid Email Id</string>
    <string name="invalid_password">Enter a valid Password</string>
    <string name="password_rules">Password should contain at least 1 alphabet and 1 number</string>
    <string name="invalidImageURL">Enter a valid Image URL</string>
    <string name="inavlid_name">Enter a valid Shoe Name</string>
    <string name="invalid_company">Enter a valid Company</string>
    <string name="invalid_size">Enter a valid size</string>
    <string name="invalid_description">Enter a valid description</string>
    <string name="add_image">Add a valid Shoe Image</string>
    <string name="log_out">Log Out</string>
</resources>
